--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "useipa",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A react hook for api fetching",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -18,7 +18,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup --external package.json"
+    "build": "tsup "
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/abidta/useipa"
   },
   "keywords": [
     "react",
