--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsup "
   },
   "repository": {
@@ -35,16 +35,26 @@
   "author": "Sainul Abid",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.66",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "autoprefixer": "^10.4.19",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.5",
+    "react-test-renderer": "^18.3.1",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
   },
@@ -52,5 +62,8 @@
     "axios": "^1.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
