--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: rm package-lock.json
+    - run: rm -rf node_modules
     - run: npm install
     - run: npm run build
     - run: npm test
