--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "useipa",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A react hook for api fetching",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -52,6 +52,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.5",
     "react-test-renderer": "^18.3.1",
