--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,9 +14,12 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      - run: npm ci
+          node-version: 20
+      - run: rm package-lock.json
+      - run: rm -rf node_modules
+      - run: npm install
       - run: npm test
+      - run: npm run build
 
   publish-npm:
     needs: build
@@ -25,9 +28,12 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+      - run: rm package-lock.json
+      - run: rm -rf node_modules
+      - run: npm install
+      - run: npm run build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_USE_IPA_SECRET}}
