--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -40,6 +40,9 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: remove
+        run: rm -rf node_modules package-lock.json
+
       - name: Install dependencies
         run: npm install
 
