--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-
+      - name: remove
+        run: rm -rf node_modules package-lock.json
+        
       - name: Install dependencies
         run: npm install
 
@@ -39,6 +41,7 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
+          always-auth: true
 
       - name: remove
         run: rm -rf node_modules package-lock.json
