--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/abidta/useipa"
+    "url": "git+https://github.com/abidta/useipa.git"
   },
   "keywords": [
     "react",
