minor: new overloading in submitApi method
test case added for asyncApi and submitform, refactored and optimized

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "tsup "
+    "build": "tsup ",
+    "format": "prettier . --write",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "repository": {
     "type": "git",
