--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": [
-    "node_modules",
-    
-    "src/*.test.ts",
-  ]
+  "exclude": ["node_modules", "src/*.test.ts"]
 }
