--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "useipa",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "A react hook for api fetching",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -61,7 +61,7 @@
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
   },
-  "peerDependencies": {
+  "dependencies": {
     "axios": "^1.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
