--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "es2018",
     "moduleResolution": "node",
     "outDir": "./dist",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "skipLibCheck": true,
     "declaration": true,
     "declarationMap": true,
@@ -18,6 +18,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src/**/*", "*tsx", "*ts"],
   "exclude": ["node_modules", "src/*.test.ts"]
 }
