patch: default abort signal time 5s to 30s
can set custom abort signal ttl with reqConfig, rm withcredentials:true on default req config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "useipa",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "A react hook for api fetching",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -33,6 +33,8 @@
     "axios",
     "useapi",
     "useipa"
+    "react-api",
+    "react-hook"
   ],
   "author": "Sainul Abid",
   "license": "MIT",
