--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "useipa",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "A react hook for api fetching",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -63,8 +63,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.3.1"
   },
   "jest": {
     "testEnvironment": "jsdom"
